# mcp-rlm

./: README.md  pyproject.toml
artifacts/: lb2_demo.json  tmp_input_mvp.txt  tmp_query.txt
artifacts/context_store_mvp/: manifest.json
artifacts/demo/: agentic_rl.jsonl  cold_start_turns.jsonl  episodes.jsonl  groups.jsonl  memory_events.jsonl  openrlhf_episodes.jsonl  steps.jsonl  verl_warm_start.jsonl
artifacts/demo_remote_mcp/: agentic_rl.jsonl  cold_start_turns.jsonl  episodes.jsonl  groups.jsonl  memory_events.jsonl  openrlhf_episodes.jsonl  steps.jsonl  verl_warm_start.jsonl
artifacts/synth/: groups.jsonl  (+7 more)
docs/: DATA_FORMAT.md  INFERENCE_WORKFLOW.md  VERL_ONPOLICY.md
examples/: mcp_servers.longbench.example.json  preprocess_long_context.py  run_analysis_server.py  run_context_server.py  run_demo.py  run_demo_with_mcp_server.py  run_longbench_v2_eval.py  run_longbench_v2_sdk_smoke.py  run_mcp_server.py  run_mvp_inference.py  run_mvp_pipeline.py  run_online_ppo_with_verl.py  synthesize_data.py
mcp_rlm/: __init__.py  file_memory.py  long_context.py  longbench_v2_programs.py  mcp.py  mcp_sdk.py  memory.py  multi_mcp.py  mvp_programs.py  policy.py  programs.py  protocol.py  reward.py  runtime.py  server_config.py  stdio_mcp_client.py  stdio_mcp_server.py  types.py
tests/: test_context_pressure.py  test_exporters.py  test_file_memory.py  test_long_context.py  test_longbench_v2_inference.py  test_mcp_sdk_mode.py  test_mcq_objects.py  test_memory.py  test_mvp_inference.py  test_runtime_parallel.py  test_server_config.py  test_stdio_mcp.py  test_verl_online.py
(+163 files in other folders)
