[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rlm"
version = "0.2.0"
description = "MCP-RLM MVP with LLM policy, file memory, hierarchical long-context reading, and multi-server MCP orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["mcp_rlm", "mcp_rlm.training", "mcp_rlm.mvp"]

